tests/ui/issues/issue-25901.stderr
error[E0277]: the trait bound `A: const Deref` is not satisfied
  --> $DIR/issue-25901.rs:4:24
   |
LL | static S: &'static B = &A;
   |                        ^^
   |
help: make the `impl` of trait `Deref` `const`
   |
LL | impl const Deref for A {
   |      +++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
